<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/lastmatchfragment"
>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerResult">
    </android.support.v7.widget.RecyclerView>


    <ProgressBar
            android:id="@+id/pbAll"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
    />


</RelativeLayout>